--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
 <!DOCTYPE html>
-<html>hi<html>
+<html>
+    <body>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <style>
+            body {
+                padding: 10%;
+            }
+        </style>
+        <title>AR&apos;s bakery | Feedback</title>
+        <h1>
+            AR&apos;s bakery | Feedback
+        </h1>
+        <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
+    </body>    
+<html>
