--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
             AR&apos;s bakery | Feedback
         </h1>
         <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
+        <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
+            <input name="email" type="email" placeholder="Email" />
+        </form>
     </body>    
 <html>
