--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         </h1>
         <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
-            <input name="email" type="email" placeholder="Email" />
+            <h3>EMAIL ADDRESS</h3>
+            <p>Will be used to contact you if needed.</p>
+            <input name="email" type="email" placeholder="Email" required />
         </form>
     </body>    
 <html>
