--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
             <h6>EMAIL ADDRESS</h6>
             <p>Will be used to contact you if needed.</p>
-            <input name="email" type="email" placeholder="Email" required />
+            <input name="email" type="email" placeholder="Email" class="form-control" required />
         </form>
     </body>    
 <html>
