--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             body {
                 padding: 20%;
             }
+            .label {
+                margin-top: 10px;
+            }
         </style>
         <title>AR&apos;s bakery | Feedback</title>
         <h1>
@@ -13,7 +16,7 @@
         </h1>
         <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
-            <h6>EMAIL ADDRESS</h6>
+            <h6 class="label">EMAIL ADDRESS</h6>
             <p>Will be used to contact you if needed.</p>
             <input name="email" type="email" placeholder="Email" class="form-control" required />
         </form>
