--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             .label {
                 margin-top: 30px;
             }
+            .req {
+                content: '*';
+                color: red;
+            }
         </style>
         <title>AR&apos;s bakery | Feedback</title>
         <h1>
@@ -16,9 +20,12 @@
         </h1>
         <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
-            <h6 class="label">EMAIL ADDRESS</h6>
+            <h6 class="label">EMAIL ADDRESS <span class="req"></span></h6>
             <p>Will be used to contact you if needed.</p>
             <input name="email" type="email" placeholder="Email" class="form-control" required />
+
+            <h6 class="label">HIGHLIGHTS</h6>
+            <p>Do you have any highlights from today&apos;s experience? Please list any here.</p>
         </form>
     </body>    
 <html>
