--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
                 margin-top: 30px;
             }
             .req {
-                content: '*';
                 color: red;
             }
         </style>
@@ -20,7 +19,7 @@
         </h1>
         <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
-            <h6 class="label">EMAIL ADDRESS <span class="req"></span></h6>
+            <h6 class="label">EMAIL ADDRESS <span class="req">*</span></h6>
             <p>Will be used to contact you if needed.</p>
             <input name="email" type="email" placeholder="Email" class="form-control" required />
 
