--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
             <h6 class="label">EMAIL ADDRESS <span class="req">*</span></h6>
             <p>Will be used to contact you if needed.</p>
-            <input name="email" type="email" placeholder="Email" class="form-control" required />
+            <input name="email" type="email" placeholder="something@arsbakery.com" class="form-control" required />
 
             <h6 class="label">HIGHLIGHTS</h6>
             <p>Do you have any highlights from today&apos;s experience? Please list any here.</p>
+            <input name="highlights" type="text" 
         </form>
     </body>    
 <html>
