--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
             <h6 class="label">HIGHLIGHTS</h6>
             <p>Do you have any highlights from today&apos;s experience? Please list any here.</p>
-            <input name="highlights" type="text" 
+            <input name="highlights" type="text" class="form-control" placeholder="Food was perfect!"/>
+
+            <h6 class="label">HOW CAN WE IMPROVE <span class="req">*</span></h6>
+            <p>List anything that can help our small yet sweet bakery improve. Harsh criticsm will also be gladly accepted.</p>
+            <input name="improve" type="text" class="form-control" placeholder="Design of the bakery should be updated to be more modern." required />
         </form>
     </body>    
 <html>
