--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <h6 class="label">HOW CAN WE IMPROVE <span class="req">*</span></h6>
             <p>List anything that can help our small yet sweet bakery improve. Harsh criticsm will also be gladly accepted.</p>
-            <input name="improve" type="text" class="form-control" placeholder="Design should really be modernized." required />
+            <input name="improve" type="text" class="form-control" placeholder="Design should really be modernized, so that it has a 21st century feel." required />
         </form>
     </body>    
 <html>
