--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <style>
             body {
-                padding: 13%;
+                padding-right: 20%;
+                padding-left: 20%;
+                padding-bottom: 10%;
+                padding-top: 10%;
             }
             .label {
                 margin-top: 30px;
