--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </h1>
         <p>Hello, thanks for shopping at our sweet bakery, we would love to hear your feedback!</p>
         <form method="POST" action="https://www.formrocket.me/api/forms/74219764/FormRocket%20Bootstrap/59176992/post/showSuccessMessageOnDone">
-            <h6 class="label">EMAIL ADDRESS <span class="req">*</span></h6>
+            <h6 class="label">EMAIL ADDRESS<span class="req">*</span></h6>
             <p>Will be used to contact you if needed.</p>
             <input name="email" type="email" placeholder="something@arsbakery.com" class="form-control" required />
 
@@ -30,9 +30,11 @@
             <p>Do you have any highlights from today&apos;s experience? Please list any here.</p>
             <input name="highlights" type="text" class="form-control" placeholder="Food was perfect!"/>
 
-            <h6 class="label">HOW CAN WE IMPROVE <span class="req">*</span></h6>
+            <h6 class="label">HOW CAN WE IMPROVE<span class="req">*</span></h6>
             <p>List anything that can help our small yet sweet bakery improve. Harsh criticsm will also be gladly accepted.</p>
             <input name="improve" type="text" class="form-control" placeholder="Design should really be modernized, so that it has a 21st century feel." required />
+            
+            <input type="submit" value="Submit" class="btn btn-primary" />
         </form>
     </body>    
 <html>
