--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             .req {
                 color: red;
             }
+            input [type="submit"] {
+                margin: 15px;
+            }
         </style>
         <title>AR&apos;s bakery | Feedback</title>
         <h1>
