--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 color: red;
             }
             input[type="submit"] {
-                margin: 15px;
+                margin-top: 15px;
             }
         </style>
         <title>AR&apos;s bakery | Feedback</title>
